# marigold-tezos

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  dune  dune-workspace  myfirstbenchmark  scratch.sh  start_node.sh
.gitlab/ci/: benchmark.yml  build.yml  integration.yml  tezt.yml
docs/: index.rst
docs/009/: michelson.rst
docs/alpha/: michelson.rst
docs/developer/: snoop_arch.rst
docs/protocols/: 009_florence.rst  alpha.rst
docs/whitedoc/: p2p.rst
emacs/: README.md
scripts/: benchmark.sh  env.sh  install_build_deps.sh  version.sh
src/bin_client/: dune
src/bin_codec/: dune
src/bin_node/: dune
src/bin_signer/: dune
src/bin_snoop/: dune
src/bin_validation/: dune
src/lib_base/: dune  tezos-base.opam
src/lib_benchmark/: pyinit.ml
src/lib_crypto/: bls_signature.ml
src/lib_crypto/test/: dune  test_bls_signature.ml
src/lib_micheline/: micheline_parser.ml  micheline_printer.mli
src/lib_micheline/test/: test_parser.ml
src/lib_new_storage/: dune  dune-project  tezos-new-storage.opam  tezos_new_storage.ml
src/lib_new_storage/test/: dune  tezos_new_storage_test.ml
src/lib_protocol_compiler/: compiler.ml  dune
src/lib_protocol_environment/: CHANGES.md  dune  environment_V1.ml  environment_V2.ml  environment_V2.mli  tezos-protocol-environment.opam
src/lib_protocol_environment/sigs/: v1.dune.inc  v2.dune.inc
src/lib_protocol_environment/structs/: v1.dune.inc  v2.dune.inc
src/lib_protocol_environment/test/unit/: dune  main.ml  test_environment_context.ml  test_memory_context.ml
src/lib_shell/: prevalidation.ml
src/lib_shell_benchmarks/: io_helpers.ml
src/lib_test_services/: test_services.ml
src/lib_validation/: block_validation.ml
src/proto_007_PsDELPH1/bin_accuser/: dune
src/proto_007_PsDELPH1/bin_baker/: dune
src/proto_007_PsDELPH1/bin_endorser/: dune
src/proto_008_PtEdoTez/bin_accuser/: dune
src/proto_008_PtEdoTez/bin_baker/: dune
src/proto_008_PtEdoTez/bin_endorser/: dune
src/proto_alpha/bin_accuser/: dune
src/proto_alpha/bin_baker/: dune
src/proto_alpha/bin_endorser/: dune
src/proto_alpha/lib_benchmark/: autocomp.ml  dune  generators.ml  kernel.ml  michelson.ml  michelson_samplers.ml  michelson_samplers_base.ml  michelson_samplers_parameters.ml  rules.ml  sampler.ml  state_space.ml  tezos-benchmark-alpha.opam
src/proto_alpha/lib_benchmark/lib_benchmark_type_inference/: dune  dune-project  inference.ml  inference.mli  int_map.ml  mikhailsky.ml  mikhailsky.mli  mikhailsky_prim.ml  monads.ml  stores.ml  tezos-benchmark-type-inference.opam  type.ml  type.mli  uf.ml
src/proto_alpha/lib_benchmark/lib_benchmark_type_inference/test/: dune  test_inference.ml  test_uf.ml
src/proto_alpha/lib_benchmark/test/: dune  test_sampling_code.ml  test_sampling_data.ml
src/proto_alpha/lib_client/: client_proto_args.ml  client_proto_args.mli  client_proto_context.ml  client_proto_context.mli  client_proto_contracts.ml  client_proto_programs.mli  injection.ml  michelson_v1_error_reporter.ml  mockup.ml  operation_result.ml
src/proto_alpha/lib_client_commands/: client_proto_context_commands.ml  client_proto_programs_commands.ml
src/proto_alpha/lib_delegate/: client_baking_nonces.ml
src/proto_alpha/lib_parameters/: default_parameters.ml
src/proto_alpha/lib_protocol/: TEZOS_PROTOCOL  alpha_context.ml  alpha_context.mli  apply.ml  apply.mli  apply_results.ml  apply_results.mli  baking.ml  baking.mli  block_operation_hashes_repr.ml  block_operation_hashes_repr.mli  block_operation_hashes_storage.ml  bls_scheme.ml  constants_repr.ml  constants_repr.mli  constants_storage.ml  constants_storage.mli  contract_services.ml  delegate_services.ml  dune.inc  event_repr.ml  event_repr.mli  fees_storage.ml  fees_storage.mli  fixed_point_repr.ml  gas_limit_repr.ml  gas_limit_repr.mli  global_constants.ml  global_constants.mli  helpers_services.ml  helpers_services.mli  init_storage.ml  keychain_repr.ml  keychain_repr.mli  keychain_storage.ml  keychain_storage.mli  main.ml  michelson_v1_gas.ml  michelson_v1_gas.mli  michelson_v1_primitives.ml  (+42 more)
src/proto_alpha/lib_protocol/benchmark/: .ocamlformat  block_setup.ml  dexter_benchmarks.ml  dune  dune-project  example.tzs  fa12.ml  fa12_benchmarks.ml  fact_benchmarks.ml  foo  foo.instr  foo.ml  main.ml  pipeline.ml  show.ml  todo  tzs.ml  unit_tests.ml  util.ml
src/proto_alpha/lib_protocol/benchmark/contracts/: dexter.tz  fa1.2.tz  fact.tz
src/proto_alpha/lib_protocol/benchmark/regression_results/: Dexter_xtzToToken  FA1.2_Approve  FA1.2_Transfer
src/proto_alpha/lib_protocol/example/interpreter/: .cmo.cmi  compile.ml  contract.ml  dune  dune-project  fast.ml  header.ml  interp.ml  main.ml  register_module.c  show.ml  slow.ml  tezos-protocol-alpha-example-interpreter.opam  tuturu.s
src/proto_alpha/lib_protocol_benchmarks/: dune  encodings_benchmarks.ml  execution_context.ml  gas_helpers.ml  interpreter_benchmarks.ml  interpreter_model.ml  interpreter_workload.ml  michelson_commands.ml  michelson_generation.ml  michelson_types.ml  registration_helpers.ml  sapling_benchmarks.ml  sapling_commands.ml  sapling_generation.ml  size.ml  tags.ml  translator_benchmarks.ml  translator_model.ml  translator_workload.ml
src/proto_alpha/lib_rollup/: counter_rollup.ml  dune  dune-project  tezos-rollup-alpha.opam  tezos_rollup_alpha.ml
tests_e2e/: dune-project
tests_e2e/contract_opcodes/: dune  main.ml
tests_python/contracts/opcodes/: log_success.tz
tests_python/contracts_alpha/ill_typed/: get_storage_invalid_arbity.tz  log_operation.tz  trace_operation.tz  view_op_bad_input_type.tz  view_op_bad_name.tz  view_op_bad_return_type.tz  view_op_dupable_type.tz  view_op_invalid_arity.tz  view_toplevel_dupable_type.tz
tests_python/contracts_alpha/opcodes/: check_transaction.tz  get_storage.tz  get_storage_inconsistent_output_type.tz  get_storage_nonexistent.tz  operation_hash.tz  ordering_root.tz  (+15 more)
tests_python/tests/: test_contract.py  test_contract_opcodes.py
tests_python/tests_alpha/: test_contract.py  test_contract_opcodes.py
tezt/_regressions/: alpha.alpha.operation.internal.out
(+827 files in other folders)
