(library
 (name tezos_rollup_alpha)
 (public_name tezos-rollup-alpha)
 (libraries tezos-base
            tezos-protocol-alpha
            tezos-protocol-alpha-parameters
            tezos-protocol-plugin-alpha)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_alpha
                   -open Tezos_protocol_alpha_parameters
                   )))
