(executables
 (names test_sampling_data test_sampling_code)
 (libraries tezos-micheline
            tezos-micheline-rewriting
            tezos-benchmark-type-inference
            tezos-benchmark
            tezos-benchmark-alpha
            tezos-protocol-alpha
            tezos-error-monad
            alcotest-lwt)
;; uncomment to enable gprof profiling
;; (ocamlopt_flags (:standard -p -ccopt -no-pie))
 (flags (:standard
         -open Tezos_micheline
         -open Tezos_benchmark_type_inference
         -open Tezos_benchmark_alpha)))

(alias
  (name buildtest)
  (deps test_sampling_data.exe test_sampling_code.exe))

(alias
  (name runtest_micheline_rewriting_data)
  (action (run %{exe:test_sampling_data.exe})))

(alias
  (name runtest_micheline_rewriting_code)
  (action (run %{exe:test_sampling_code.exe})))


(alias
  (name runtest)
  (deps (alias runtest_micheline_rewriting_data)
        (alias runtest_micheline_rewriting_code)
  ))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
