(executable
 (name main)
 (modes byte native)
 (libraries tezos-base tezos-micheline tezos-protocol-environment
   alcotest-lwt tezos-alpha-test-helpers tezos-stdlib-unix tezos-client-base
   tezos-protocol-alpha-parameters tezos-test-services sapling core
   core_bench genprint)
 (flags
  (:standard -open Tezos_base__TzPervasives -open Tezos_micheline -open
    Tezos_client_alpha -open Tezos_protocol_alpha -open
    Tezos_protocol_environment_alpha -open Tezos_alpha_test_helpers -open
    Tezos_test_services))
 (preprocess
  (pps ppx_deriving.show)))

(rule
 (alias runtest_proto_alpha)
 (deps
  (glob_files contracts/*))
 (package tezos-protocol-alpha-tests)
 (action
  (run %{exe:main.bc})))

(rule
 (alias runtest)
 (package tezos-protocol-alpha-tests)
 (deps
  (alias runtest_proto_alpha))
 (action (progn)))
