(executable
 (name main)
 (modes byte native)
 (libraries tezos-base tezos-micheline tezos-protocol-environment
   alcotest-lwt tezos-alpha-test-helpers tezos-stdlib-unix tezos-client-base
   tezos-protocol-alpha-parameters tezos-test-services tezos-sapling core
   core_bench)
 (flags
  (:standard -open Tezos_base__TzPervasives -open Tezos_micheline -open
    Tezos_client_alpha -open Tezos_protocol_alpha -open
    Tezos_protocol_environment_alpha -open Tezos_alpha_test_helpers -open
    Tezos_test_services)))

(rule
 (alias dev)
 (deps
  (glob_files contracts/*))
 (action
  ; Custom switch to bypass the core_bench stuff
  (run %{exe:main.bc} --devmode)))
